tests/fixtures/errors/postprocess/variants/wrong-default-export/postprocess.js
console.log("This is stdout\non two lines");
module.exports = {
  postproceess: function () {},
};
console.error("This is stderr");
